# Muon-Tomography-AI

./: .gitignore  LICENSE  README.md  mae_train.ipynb  main.py  model.py  mu-net-sample-notebook-inference.ipynb  plotting.py  train.py  tune_parameters.py
data_generation/: __init__.py  bicubic_interp.py  data_augmentation.py  data_generation_main.py  dicom_to_tfds.py  frt.ipynb  lodopab_resimulate_obs.py  lpradon.py  perlin_noise.py  perlin_test.ipynb  process_raw_detections.py  radon_tf.py  random_shapes.py  renderer.py  scattering_prediction_tfrecords.py  utils.py  voxel_generator.py  voxels_prediction_tfrecords.py
data_generation/geant4/: README.md  geant4_todo.md  run.sh
data_generation/geant4/source/: AboutCode.md  CMakeLists.txt  mu.cc
data_generation/geant4/source/include/: muAnalyzer.hh  muDetectorConstruction.hh  muEventAction.hh  muParticleGun.hh  muParticleGunMessenger.hh  muPhysicsList.hh  muPrimaryGeneratorAction.hh  muRunAction.hh  muRunManager.hh  muSensorHit.hh  muSensorSD.hh
data_generation/geant4/source/src/: PerlinNoise.cc  muAnalyzer.cc  muDetectorConstruction.cc  muEventAction.cc  muParticleGun.cc  muParticleGunMessenger.cc  muPhysicsList.cc  muPrimaryGeneratorAction.cc  muRunAction.cc  muRunManager.cc  muSensorHit.cc  muSensorSD.cc
layers/: SIREN.py  __init__.py  agg_2d.py  agg_3d.py  attention.py  consistency.py  convnext_block.py  dense_block.py  diffusion.py  gaussian_agg3d.py  hybrid.py  inverted_residual_block.py  kmeans.py  knn.py  knowledge_distillation.py  mae.py  poca.py  polar.py  pooling_model.py  regularisation.py  residual_block.py  transformer.py  triplane.py  utils.py  vision_transformer.py
logs/: data_analysis.nb  logs.md  old_logs.md  poca_dosage_data.csv
logs/dosage_data/: README.md  data.csv  fbp.csv  model_0.005_history.csv  model_0.05_history.csv  model_0.1_history.csv  model_0.7_history.csv  model_1_history.csv  plot_graph.py
logs/masked_sinograms/: data.csv  fbp.csv
logs/muons_dosage_data_old/: README.md  model_0.01_history.csv  model_0.02_history.csv  model_0.07_history.csv  model_0.2_history.csv  (+1 more)
losses/: __init__.py  dice_loss.py  perception.py
metrics/: __init__.py  flops.py  metrics.py
misc/: __init__.py  clr.py  sam.py  utils.py
models/: __init__.py  agg_3d.py  poca.py  trajectory_prediction.py
muon_reconstruction/: __init__.py  em.py  mpt.py  poca.py  sde.py
testing_notebooks/: test_downsampling.ipynb  test_kmeans.ipynb  test_knn.ipynb
utils/: __init__.py  conv_utils.py  data.py  gaussian_diffusion.py
(+16 files in other folders)
